tests/paczka2/big_fuzzy/68859947.err
Error in line 7: gbBxLgY5^mG S895 8,3
Error in line 1: ULi18FLI A782 48,3
Error in line 10: gbBxLgY51mG S895 3,9
Error in line 27: gbBxLgY51mG S948 76,2
Error in line 32: ULi18FLI S895 37,6
Error in line 47: BDJP S948 -4,4
Error in line 46: BDJP S948 72,2
Error in line 43: gbBxLgY51mG S895 14,8
Error in line 54: CCFwU4zu S895 19,3
Error in line 58: CCFwU4zu S948 52,3
Error in line 49: BDJP S151 99,5
Error in line 65: ULi18FLI S151 12,0
Error in line 70: BDJP A782 55,0
Error in line 78: S895 782 38,3
Error in line 74: ULi18FLI A782 4,2
Error in line 86: S895 S948 97,9
Error in line 90: BDJP S151 83,39
Error in line 89: S895 S151 94,9
Error in line 93: CCFwU4zu S151 74,9
Error in line 87: BDJP S151 24,6
Error in line 101: CCFwU4zu S948 -2,8
Error in line 88: gbBxLgY51mG S151 37,8
Error in line 98: BDJP S948 94,4
Error in line 102: gbBxLgY51mG S948 33,6
Error in line 107: BDJP S941 199,2
Error in line 119: dROg0RnzE A782 98,1
Error in line 127: S895 S151 58,62
Error in line 125: S895 S151 58,8
Error in line 129: S895 S895 8,7
Error in line 128: Uve A782 55,3
Error in line 131: BDJP S948 115,5
Error in line 97: CCFwU4zu S948 58,6
Error in line 137: CCFwU4zu S895 19,1
Error in line 148: BDJP A782 44,5
Error in line 149: pdROpg0RnzE S948 54,1
Error in line 151: ULi18FLI A782 48,0
Error in line 143: CCFwU4zu S151 36,5
Error in line 150: BDJP S151 80,0
Error in line 156: S895 S948 99,0
Error in line 168: S895 S151 51,5
Error in line 170: S895 S948 63,0
Error in line 173: S895 S895 32,7
Error in line 177: Uve S895 17,0
Error in line 180: Uve A782 41,6
Error in line 193: CCFwU4zu S948 53,1
Error in line 169: BDJP A782 55,1
Error in line 204: pdROpg0RnzE S948 3,7
Error in line 206: pdROpg0RnzE S895 97,3
Error in line 208: pdROpg0RnzE A782 72,8
Error in line 239: Uve S151 53,1
Error in line 243: gbBxLgY51mG S151 39,8
Error in line 229: ULi18FLI A782 97,6
Error in line 248: gbBxLgY51mG S948 81,7
